Version finale commentée et nettoyée.